cleanup, fix light-bg color value for a11y contrast

--- a/src/components/call-to-action/call-to-action.scss
+++ b/src/components/call-to-action/call-to-action.scss
@@ -7,7 +7,7 @@
   margin-block: var(--spacing-2xl);
 
   &[data-component-theme='light-blue-bg'] {
-    background-color: var(--color-emulsify-blue-300);
+    background-color: var(--cta-background);
   }
 }
 
